--- a/frontend/requirements.txt
+++ b/frontend/requirements.txt
@@ -1,22 +1,46 @@
+argcomplete==1.9.3
 backports.functools-lru-cache==1.5
 boto3==1.9.74
 botocore==1.12.74
 certifi==2018.11.29
+cfn-flip==1.1.0.post1
 chardet==3.0.4
+Click==7.0
 cycler==0.10.0
 docutils==0.14
+durationpy==0.5
+Flask==1.0.2
+Flask-WTF==0.14.2
+future==0.16.0
 futures==3.2.0
+hjson==3.0.1
 idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10
 jmespath==0.9.3
+kappa==0.6.0
 kiwisolver==1.0.1
+lambda-packages==0.20.0
+MarkupSafe==1.1.0
 matplotlib==2.2.3
 numpy==1.15.4
 Pillow==5.4.1
+placebo==0.8.2
 pyparsing==2.3.0
-python-dateutil==2.7.5
+python-dateutil==2.6.1
+python-slugify==1.2.4
 pytz==2018.9
+PyYAML==3.13
 requests==2.21.0
 s3transfer==0.1.13
 six==1.12.0
 subprocess32==3.5.3
+toml==0.10.0
+tqdm==4.19.1
+troposphere==2.4.0
+Unidecode==1.0.23
 urllib3==1.24.1
+Werkzeug==0.14.1
+wsgi-request-logger==0.4.6
+WTForms==2.2.1
+zappa==0.47.1
